# USTC_MM_26

./: README.md
hw_1/op_1/code_template_cpp/: CMakeLists.txt  main.cpp
hw_2/: README.md
hw_2/op_1/code/: CMakeLists.txt  main.cpp  text.cpp
hw_3/: README.md
hw_3/insects/: insects-2-testing.txt  insects-testing.txt
hw_4/: README.md
hw_4/data/: population.xlsx
hw_4/poissonediting/: poisson_editing.m
